--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(ExprParsing)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -w")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(Expression)
-add_subdirectory(Expression)
+include_directories(SGAExpression)
+add_subdirectory(SGAExpression)
 
 add_executable(differentiator main.cpp)
 target_link_libraries(differentiator Expression)
